--- a/src/index.njk
+++ b/src/index.njk
@@ -2,4 +2,5 @@
 layout: base.njk
 title: My Blog
 ---
-<h1>Welcome to my blog!</h1>
+<h1 class="text-blue-600 text-3xl">Welcome to my blog!</h1>
+<p>Boom stickatyboom!</p>
