--- a/src/index.njk
+++ b/src/index.njk
@@ -1,6 +1,6 @@
 ---
 layout: base.njk
-title: My Blog
+title: Marketingchefen - Rådgivning, rekruttering og community
 ---
 <h1 class="text-blue-600 text-3xl">Welcome to my blog!</h1>
 <p>Boom stickatyboom!</p>
