--- a/src/_includes/base.njk
+++ b/src/_includes/base.njk
@@ -9,8 +9,19 @@
         <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
         <link rel="stylesheet" href="/css/styles.css">
         <title>{{ title }}</title>
+        <script defer src="https://unpkg.com/alpinejs@3.x.x/dist/cdn.min.js"></script>
     </head>
     <body>
-        {{ content | safe }}
+        {% include "nav.njk" %}
+
+        <main>
+            {{ content | safe }}
+        </main>
+
+        {% include "footer.njk" %}
+
+        <!-- 100% privacy-first analytics -->
+        <script async src="https://scripts.simpleanalyticscdn.com/latest.js"></script>
+
     </body>
 </html>
