--- a/src/index.njk
+++ b/src/index.njk
@@ -3,4 +3,4 @@ layout: base.njk
 title: Marketingchefen - Rådgivning, rekruttering og community
 ---
 <h1 class="text-blue-600 text-3xl">Welcome to my blog!</h1>
-<p>Boom stickatyboom!</p>
+<p>Boom stickatyboom...!</p>
